--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <title>НовРемТех</title>
 </head>
@@ -31,7 +32,7 @@
 		<section class="oneblock">
 			<div class="fon fon__oneblock"></div>
 			<div class="slogan__oneblock">
-				<h1 class="zagolovok zagolovok__oneblock">Ремонт вместо замены</h1>
+				<h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"data-aos-offset="0" class="zagolovok zagolovok__oneblock">Ремонт вместо замены</h1>
 			</div>
 		</section>
 		<section class="twoblock">
@@ -52,37 +53,37 @@
 		<section class="treeblock">
 			<h2 class="zagolovok zagolovok__treeblock">Сравнение цен</h2>
 			<div class="setka__treeblock">
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img class="imgsetka" src="static/nasos.jpg" alt="насос">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-right" class="elemsetki">
 					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
@@ -93,22 +94,22 @@
 		<section class="fourblock">
 			<h2 class="zagolovok zagolovok__fourblock">Довольные клиенты</h2>
 			<div class="setka__fourblock">
-				<div class="elemsetki">
+				<div data-aos="fade-down" class="elemsetki">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-down" class="elemsetki">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-down" class="elemsetki">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div class="elemsetki">
+				<div data-aos="fade-down" class="elemsetki">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
@@ -120,7 +121,7 @@
 				<h2 class="zagolovok zagolovok__fiveblock">Контакты</h2>
 				<div class="phone"><a href="tel:+78312465432">+7 (8312) 46-54-32</a></div>
 				<p>603002, г.Н.Новгород ул.Обухова 11, оф.208</p>
-				<div class="button"><a>Свяжись</a></div>
+				<div data-aos="fade-right" class="button"><a>Свяжись</a></div>
 			</div>
 		</section>
 		<section class="footer">
@@ -128,9 +129,12 @@
 				<div class="logo-bel img-belzon"></div>
 			</div>
 			<p>Региональный представитель фирмы Belzona Polymerics Ltd.</p>
-			
 		</section>
 	</div>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+  		AOS.init();
+	</script>
 </body>
 
 </html>
