--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header class="header">
-		<div class="logo__header">
+		<div class="header__logo">
 			<div class="logo img"></div>
 		</div>
 		<nav class="menu menu__header">
@@ -30,14 +30,14 @@
 	</header>
 	<div class="wrapper">
 		<section class="oneblock">
-			<div class="fon fon__oneblock"></div>
-			<div class="slogan__oneblock">
-				<h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"data-aos-offset="0" class="zagolovok zagolovok__oneblock">Ремонт вместо замены</h1>
+			<div class="background oneblock__background"></div>
+			<div class="oneblock__tagline">
+				<h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"data-aos-offset="0" class="title title__oneblock">Ремонт вместо замены</h1>
 			</div>
 		</section>
 		<section class="twoblock">
-			<div class="zagolovok__twoblock">
-				<h2 class="zagolovok">Очевидные приемущества:</h2>
+			<div class="title__twoblock">
+				<h2 class="title">Очевидные приемущества:</h2>
 			</div>
 			<div class="text text__twoblock">
 				<h3>— Экономия</h3> 
@@ -51,40 +51,42 @@
 			</div>
 		</section>
 		<section class="treeblock">
-			<h2 class="zagolovok zagolovok__treeblock">Сравнение цен</h2>
-			<div class="setka__treeblock">
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
-					<img class="imgsetka" src="static/nasos.jpg" alt="насос">
+			<div class="treeblock__title">
+				<h2 class="title">Сравнение цен</h2>
+			</div>
+			<div class="treeblock__grid">
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
+					<img src="static/nasos.jpg" alt="насос">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
 				</div>
-				<div data-aos="fade-right" class="elemsetki">
-					<h3 class="zagolovok title__elemsetki">Ебаный насос</h3>
+				<div data-aos="fade-right" class="elemgrid">
+					<h3 class="title elemgrid__title">Ебаный насос</h3>
 					<img src="static/nasos.jpg" alt="">
 					<p>Цена замены: <span class="pricered">90000000р</span></p>
 					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
@@ -92,24 +94,26 @@
 			</div>
 		</section>
 		<section class="fourblock">
-			<h2 class="zagolovok zagolovok__fourblock">Довольные клиенты</h2>
-			<div class="setka__fourblock">
-				<div data-aos="fade-down" class="elemsetki">
+			<div class="fourblock__title">
+				<h2 class="title">Довольные клиенты</h2>
+			</div>
+			<div class="fourblock__grid">
+				<div data-aos="fade-down" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemsetki">
+				<div data-aos="fade-down" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemsetki">
+				<div data-aos="fade-down" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemsetki">
+				<div data-aos="fade-down" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
@@ -117,15 +121,17 @@
 			</div>
 		</section>
 		<section class="fiveblock">
-			<div class="contacts contacts__fiveblock">
-				<h2 class="zagolovok zagolovok__fiveblock">Контакты</h2>
-				<div class="phone"><a href="tel:+78312465432">+7 (8312) 46-54-32</a></div>
+			<div class="contacts fiveblock__contacts">
+				<div class="fiveblock__title">
+					<h2 class="title">Контакты</h2>
+				</div>
+				<div class="fiveblock__phone"><a href="tel:+78312465432">+7 (8312) 46-54-32</a></div>
 				<p>603002, г.Н.Новгород ул.Обухова 11, оф.208</p>
-				<div data-aos="fade-right" class="button"><a>Свяжись</a></div>
+				<div data-aos="fade-right" class="fiveblock__button"><a>Свяжись</a></div>
 			</div>
 		</section>
 		<section class="footer">
-			<div class="logo__footer">
+			<div class="footer__logo">
 				<div class="logo-bel img-belzon"></div>
 			</div>
 			<p>Региональный представитель фирмы Belzona Polymerics Ltd.</p>
