--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
 				<span></span>
 			</label>
 			<ul class="menu__box">
-				<li><a class="menu__item" href="#">Приемущества</a></li>
-				<li><a class="menu__item" href="#">Клиенты</a></li>
-				<li><a class="menu__item" href="#">Контакты</a></li>
+				<li><a class="menu__item" href="#1">Приемущества</a></li>
+				<li><a class="menu__item" href="#2">Сравнения цен</a></li>
+				<li><a class="menu__item" href="#3">Клиенты</a></li>
+				<li><a class="menu__item" href="#4">Контакты</a></li>
 			</ul>
 		</div>
 		</nav>
@@ -33,10 +34,11 @@
 			<div class="background oneblock__background"></div>
 			<div class="oneblock__tagline">
 				<h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"data-aos-offset="0" class="title title__oneblock">Ремонт вместо замены</h1>
+				<p class="text">Ремонт вместо замены всем всем всем</p>
 			</div>
 		</section>
 		<section class="twoblock">
-			<div class="title__twoblock">
+			<div id="1" class="title__twoblock">
 				<h2 class="title">Очевидные приемущества:</h2>
 			</div>
 			<div class="text text__twoblock">
@@ -50,7 +52,7 @@
 				<p>Наша работа устранит проблему на максимально возможный срок.</p>
 			</div>
 		</section>
-		<section class="treeblock">
+		<section id="2" class="treeblock">
 			<div class="treeblock__title">
 				<h2 class="title">Сравнение цен</h2>
 			</div>
@@ -93,34 +95,34 @@
 				</div>
 			</div>
 		</section>
-		<section class="fourblock">
+		<section id="3" class="fourblock">
 			<div class="fourblock__title">
 				<h2 class="title">Довольные клиенты</h2>
 			</div>
 			<div class="fourblock__grid">
-				<div data-aos="fade-down" class="elemgrid">
+				<div data-aos="fade-right" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemgrid">
+				<div data-aos="fade-right" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemgrid">
+				<div data-aos="fade-right" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
-				<div data-aos="fade-down" class="elemgrid">
+				<div data-aos="fade-right" class="elemgrid">
 					<img src="static/luklogo.png" alt="">
 					<p>Лукойл</p>
 					<a href="">Отзыв</a>
 				</div>
 			</div>
 		</section>
-		<section class="fiveblock">
+		<section id="4" class="fiveblock">
 			<div class="contacts fiveblock__contacts">
 				<div class="fiveblock__title">
 					<h2 class="title">Контакты</h2>
