--- a/app/index.html
+++ b/app/index.html
@@ -46,14 +46,26 @@
 				<h2 class="title">Очевидные преимущества:</h2>
 			</div>
 			<div class="text text__twoblock">
-				<h3>— Экономия</h3> 
-				<p>Реставрация оборудования явно дешевле замены.</p>
-				<h3>— Надежность</h3> 
-				<p>Покрытие бельзоны превосходит по стойкости материнский материал.</p>
-				<h3>— Доступность</h3> 
-				<P>Все работы производятся без необходимости вывоза оборудования.</p>
-				<h3>— Практичность</h3> 
-				<p>Наша работа устранит проблему на максимально возможный срок.</p>
+				<div class="twoblock__column">
+					<h3>— Экономия</h3> 
+					<p>Реставрация оборудования явно дешевле замены.</p>
+				</div>
+				<div class="twoblock__column">
+					<h3>— Надежность</h3> 
+					<p>Покрытие бельзоны превосходит по стойкости материнский материал.</p>
+				</div>
+				<div class="twoblock__column">
+					<h3>— Доступность</h3> 
+					<P>Все работы производятся без необходимости вывоза оборудования.</p>
+				</div>
+				<div class="twoblock__column">
+					<h3>— Доступность</h3> 
+					<P>Все работы производятся без необходимости вывоза оборудования.</p>
+				</div>
+				<div class="twoblock__column">
+					<h3>— Практичность</h3> 
+					<p>Наша работа устранит проблему на максимально возможный срок.</p>
+				</div>
 			</div>
 		</section>
 		<section id="2" class="treeblock">
