--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"/>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<link rel="shortcut icon" href="/static/favicon.png" type="image/png">
 <title>НовРемТех</title>
 </head>
 <body>
@@ -72,48 +73,62 @@
 			<div class="treeblock__title">
 				<h2 class="title">Сравнение цен</h2>
 			</div>
-			<div class="treeblock__grid js-slick">
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
-				</div>
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
-				</div>
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
-				</div>
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
-				</div>
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
-				</div>
-				<div class="elemgrid">
-					<h3 class="title elemgrid__title">Насос</h3>
-					<img src="static/nasos.jpg" alt="">
-					<p>Цена замены: <span class="pricered">90000000р</span></p>
-					<p>Цена ремонта: <span class="pricegreen">150р</span></p>
-					<a class="">Подробнее</a>
+			<div class="treeblock__grid">
+				<div class="slider js-slick">
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<h3 class="title elemgrid__title">Насос</h3>
+							<img src="static/nasos.jpg" alt="">
+							<p>Цена замены: <span class="pricered">90000000р</span></p>
+							<p>Цена ремонта: <span class="pricegreen">150р</span></p>
+							<a class="">Подробнее</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
