--- a/app/index.html
+++ b/app/index.html
@@ -136,26 +136,36 @@
 			<div class="fourblock__title">
 				<h2 class="title">Довольные клиенты</h2>
 			</div>
-			<div class="fourblock__grid js-slick">
-				<div class="elemgrid">
-					<img src="static/luklogo.png" alt="">
-					<p>Лукойл</p>
-					<a href="">Отзыв</a>
-				</div>
-				<div class="elemgrid">
-					<img src="static/luklogo.png" alt="">
-					<p>Лукойл</p>
-					<a href="">Отзыв</a>
-				</div>
-				<div class="elemgrid">
-					<img src="static/luklogo.png" alt="">
-					<p>Лукойл</p>
-					<a href="">Отзыв</a>
-				</div>
-				<div class="elemgrid">
-					<img src="static/luklogo.png" alt="">
-					<p>Лукойл</p>
-					<a href="">Отзыв</a>
+			<div class="fourblock__grid">
+				<div class="slider js-slick">
+					<div class="slider__item">
+						<div class="elemgrid">
+							<img src="static/luklogo.png" alt="">
+							<p>Лукойл</p>
+							<a href="">Отзыв</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<img src="static/luklogo.png" alt="">
+							<p>Лукойл</p>
+							<a href="">Отзыв</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<img src="static/luklogo.png" alt="">
+							<p>Лукойл</p>
+							<a href="">Отзыв</a>
+						</div>
+					</div>
+					<div class="slider__item">
+						<div class="elemgrid">
+							<img src="static/luklogo.png" alt="">
+							<p>Лукойл</p>
+							<a href="">Отзыв</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
